--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.maateen.me/bangla/font.css" rel="stylesheet">
-    <title>Crystal Cure Pest Control</title>
+    <meta name="description" content="Crystal Cure Pest Control is a dedicated and reliable pest management service that aims to provide comprehensive solutions for residential and commercial spaces. With a focus on quality and customer satisfaction, our expert team employs modern and eco-friendly methods to address and eliminate various pest issues.">
+    <title>Crystal Cure Pest Control || Pest Control Service</title>
   </head>
   <body>
     <div id="root"></div>
